k8s/core/envoy-gateway/extra/k3s.fsn.as212024.net/gateway-eg-http-bar.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-http-bar
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-http-bar
    annotations:
      io.cilium/lb-ipam-ips: 209.112.97.162
      external-dns.kubernetes.io/hostname: gw-eg-http-bar.k3s.fsn.as212024.net
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lama-corp-space-ecdsa-tls
          - name: lama-corp-space-rsa-tls
