k8s/core/envoy-gateway/extra/k3s.fsn.as212024.net/gateway-eg-http-public.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-http-public
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-http-public
    annotations:
      io.cilium/lb-ipam-ips: 209.112.97.43,2001:67c:17fc::443
      external-dns.kubernetes.io/hostname: gw-eg-http-public.k3s.fsn.as212024.net
  allowedListeners:
    namespaces:
      from: All
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
